--- a/src/polizhai/src/pages/welcome/welcome-page.css
+++ b/src/polizhai/src/pages/welcome/welcome-page.css
@@ -1,9 +1,41 @@
 .welcome-page {
-    display: flex;
-    text-align: center;
-    justify-content: center;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
 
-.welcome-page__title {
-    color: white;
+.welcome-page-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: 1;
+}
+
+.welcome-page-header {
+    position: relative;
+    z-index: 2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    text-align: center;
+    padding: 1rem;
+}
+
+.welcome-page-header__title {
+    font-family: Poppins, serif;
+    font-size: 3vw;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: 1.6px;
+    background: linear-gradient(180deg, #FFF 0%, #333 206.94%);
+    background-clip: text;
+    max-width: 90%;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
