--- a/website/src/app/styles/index.css
+++ b/website/src/app/styles/index.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Poppins';
-    src: url("../../public/fonts/Poppins-Medium.ttf");
+    src: url("../../../public/fonts/Poppins-Medium.ttf");
 }
 
 
