--- a/website/src/app/styles/index.css
+++ b/website/src/app/styles/index.css
@@ -1,10 +1,6 @@
-@font-face {
-    font-family: 'Poppins';
-    src: url("../../../public/fonts/Poppins-Medium.ttf");
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    width: 100%;
 }
-
-
-body {
-    background-color: #333333
-}
-
