--- a/website/src/pages/coming-soon/styles/coming-soon-page.css
+++ b/website/src/pages/coming-soon/styles/coming-soon-page.css
@@ -2,17 +2,9 @@
     background: radial-gradient(61.89% 61.89% at 50% 107.39%, #1A1A1A 0%, #202020 100%);
 }
 
-h1 {
-    background: linear-gradient(180deg, #FFF 0%, #333 206.94%);
-
-    font-family: 'Poppins', sans-serif;
-    font-size: 5vw;
-    font-style: normal;
-    font-weight: 700;
-    line-height: normal;
-    text-transform: uppercase;
-    user-select: none;
-    background-clip: text;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+.coming-soon-page {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
 }
