--- a/website/src/app/styles/font-faces.css
+++ b/website/src/app/styles/font-faces.css
@@ -1,21 +1,20 @@
 @font-face {
-    font-family: 'Poppins Regular';
+    font-family: 'Poppins';
     font-style: normal;
     font-weight: 400;
-    src: url('@fonts/Poppins-Regular.ttf') format('truetype');
+    src: url('../../shared/assets/fonts/Poppins-Regular.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: 'Poppins Medium';
+    font-family: 'Poppins';
     font-style: normal;
-    font-weight: 500;
-    src: url('@fonts/Poppins-Medium.ttf') format('truetype');
+    font-weight: 600;
+    src: url('../../shared/assets/fonts/Poppins-Medium.ttf') format('truetype');
 }
 
 @font-face {
-    font-family: 'Poppins Bold';
+    font-family: 'Poppins';
     font-style: normal;
     font-weight: 700;
-    src: url('@fonts/Poppins-Bold.ttf') format('truetype');
+    src: url('../../shared/assets/fonts/Poppins-Bold.ttf') format('truetype');
 }
-
