--- a/website/src/pages/welcome/styles/welcome-page.css
+++ b/website/src/pages/welcome/styles/welcome-page.css
@@ -1,4 +1,5 @@
 .welcome-page {
+    background-color: #1E1E1E;
     position: relative;
     width: 100%;
     height: 100vh;
@@ -15,6 +16,7 @@
     z-index: 1;
 }
 
+
 .welcome-page-header {
     flex-direction: column;
     position: relative;
@@ -25,20 +27,37 @@
     text-align: center;
     height: 100%;
     padding: 1rem;
-
-    font-family: Poppins, serif;
-
 }
 
 .welcome-page-header__title {
-    font-size: 3vw;
+    height: 20rem;
+    font-family: 'Poppins', sans-serif;
     font-style: normal;
-    font-weight: 500;
+    font-weight: 600;
     line-height: normal;
+    font-size: 80px;
     letter-spacing: 1.6px;
     background: linear-gradient(180deg, #FFF 0%, #333 206.94%);
-    background-clip: text;
-    max-width: 90%;
+    max-width: 24ch;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+@media (max-width: 800px) {
+    .welcome-page-header__title {
+        font-size: 16px;
+    }
+}
+
+
+@media (max-width: 200px) {
+    .welcome-page-header__title {
+        font-size: 12px;
+    }
+}
+
+@media (max-width: 100px) {
+    .welcome-page-header__title {
+        font-size: 6px;
+    }
 }
