--- a/website/src/shared/ui/Title/Title.module.css
+++ b/website/src/shared/ui/Title/Title.module.css
@@ -1,16 +1,12 @@
 .title {
     background: linear-gradient(180deg, #FFF 0%, #333 206.94%);
-
     text-align: center;
-
-
     font-family: 'Poppins', sans-serif;
-    font-size: 3ch;
+    font-size: 80px;
     font-style: normal;
-    font-weight: 800;
-    letter-spacing: 0.5rem;
+    font-weight: 500;
+    letter-spacing: 0.1em;
     line-height: normal;
-    text-transform: uppercase;
     user-select: none;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
