--- a/website/src/widgets/IconButton/icon-button.scss
+++ b/website/src/widgets/IconButton/icon-button.scss
@@ -1,4 +1,4 @@
-.iconButton {
+.icon-button {
     padding: 0;
     margin: 0;
     fill-opacity: 0;
@@ -10,7 +10,7 @@
     transition: opacity 0.3s ease;
 }
 
-.iconButton:hover {
+.icon-button:hover {
     cursor: pointer;
     opacity: 0.8;
 }
