feat(welcome): add all images with blur and improve image handling
- Added all background images with blur support
- Added default export for FloatingImage and Image components
- Enabled lazy loading inside the Image component
- Refactored navigation bar structure from <div> to semantic <ul>

--- a/website/src/pages/welcome/ui/Memo/memo.scss
+++ b/website/src/pages/welcome/ui/Memo/memo.scss
@@ -20,17 +20,18 @@
   }
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1020px) {
   #memo {
     flex-direction: column;
     height: fit-content;
-    width: fit-content;
+    width: 100%;
+    align-items: center;
 
     .title {
       font-size: 7vw;
       text-align: left;
 
-      .line {
+      .title-line {
         display: block;
         white-space: normal;
       }
