--- a/website/src/pages/welcome/index.scss
+++ b/website/src/pages/welcome/index.scss
@@ -62,10 +62,10 @@
 
       #icosahedron {
         position: absolute;
-        width: 32rem;
+        width: 25vw;
 
-        top: 60rem;
-        left: 20rem;
+        top: 80vh;
+        left: 15vw;
 
       }
 
@@ -87,7 +87,7 @@
 }
 
 
-@media (max-width: 1100px) {
+@media (max-width: 1020px) {
   .welcome-page {
     .objects {
       display: none;
